<resources>
    <string name="app_name">My Android Device</string>

    <string name="home">Home</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="board">Board</string>
    <string name="hardware">Hardware</string>
    <string name="serial_no">Serial Number</string>
    <string name="android_id">Android ID</string>
    <string name="screen_resolution">Screen resolution</string>
    <string name="boot_loader">Boot loader</string>
    <string name="user">User</string>
    <string name="host">Host</string>
    <string name="model">Model</string>
    <string name="device">Device</string>
    <string name="view_category">Open Category</string>
    <string name="change_theme">Change theme</string>
    <string name="about_us">About us</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="hide_category">Close Category</string>
    <string name="choose_language">Choose language</string>
    <string name="en_us">USA</string>
    <string name="network">Network</string>
    <string name="no_traffic_state_monitoring_support">No traffic state monitoring support</string>
    <string name="network_data">Network data</string>
    <string name="processor_label">Processor</string>
    <string name="no_oreo_supports">No Oreo supports</string>
    <string name="processor_data">Processor data</string>
    <string name="battery">Battery</string>
    <string name="voltage">Voltage</string>
    <string name="temperature">Temperature</string>
    <string name="battery_health">Battery health</string>
    <string name="compass">Compass</string>
    <string name="no_magnection_senscer">No magnection sensor</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="c_symbol">C</string>
    <string name="wifi">WiFi</string>
    <string name="unavailable">Unavaliable</string>
    <string name="battery_capacity">Battery capacity</string>
    <string name="unknown">Unknown</string>
    <string name="good">Good</string>
    <string name="over_heated">Over heated</string>
    <string name="dead">Dead</string>
    <string name="over_voltage">Over voltage</string>
    <string name="failed">Failed</string>
    <string name="cold">Cold</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="root_access">Root</string>
    <string name="architecture">Architecture</string>
    <string name="build_date">Build date</string>
    <string name="security_patch_level">Security</string>
    <string name="kernel">Kernel</string>
    <string name="version">Version</string>
    <string name="version_name">Version Name</string>
    <string name="product">Product</string>
    <string name="api_level">API level</string>
    <string name="build_id">Build ID</string>
    <string name="build_time">Build time</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="os_label">Operating system</string>

    <!-- OS version names -->
    <string name="honeycomb">Honeycomb</string>
    <string name="release_date">Release Date:\u0020</string>
    <string name="ics">Ice Cream Sandwich</string>
    <string name="jellybean">Jelly Bean</string>
    <string name="kitkat">Kitkat</string>
    <string name="lollipop">Lollipop</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="nougat">Nougat</string>
    <string name="oreo">Oreo</string>
    <string name="pie">Pie</string>
    <string name="unknown_version">Unknown version</string>
    <string name="cpu">CPU</string>
    <string name="processor">Processor</string>
    <string name="cores">Cores</string>
    <string name="frequencies">Frequencies</string>
    <string name="see_graph">See graph</string>
    <string name="hide_graph">Hide graph</string>
    <string name="core">Core</string>

    <string name="battery_type">Battery type</string>
    <string name="power_source">Power source</string>
    <string name="battery_temperature">Battery temperature</string>
    <string name="battery_voltage">Battery voltage</string>
    <string name="battery_scale">Battery scale</string>
    <string name="ac_power">AC power</string>

    <string name="connection_status">Connection Status</string>
    <string name="data_type">Data type</string>
    <string name="network_type">Network type</string>
    <string name="ip_address">IP address</string>
    <string name="mac_address">MAC address</string>
    <string name="ssid">SSID</string>
    <string name="link_speed">Link speed</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="mbps">Mb/s</string>


    <string name="screen">Screen</string>
    <string name="screen_size">Screen size</string>
    <string name="screen_physical_size">Screen physical size</string>
    <string name="default_screen_orientation">Default screen orientation</string>
    <string name="screen_total_width">Screen total width</string>
    <string name="screen_total_height">Screen total height</string>
    <string name="refresh">Refresh</string>
    <string name="name">Name</string>
    <string name="max_gpu_texture_size">Max gpu texture size</string>
    <string name="density">Density</string>
    <string name="screen_display_bucket">Screen display bucket</string>
    <string name="screen_dpi">Screen DPI</string>
    <string name="xdpi">XDPI</string>
    <string name="ydpi">YDPI</string>
    <string name="screen_logical_density">Screen logical density</string>
    <string name="screen_scaled_density">Screen scaled density</string>
    <string name="resolution">Resolution</string>
    <string name="screen_usable_width">Screen usable width</string>
    <string name="screen_usable_height">Screen usable height</string>
    <string name="density_independent_width">Density independent width</string>
    <string name="density_independent_height">Density independent height</string>
    <string name="display">Display</string>
    <string name="inches">Inches</string>
    <string name="px">px</string>
    <string name="fps">fps</string>
    <string name="dpi">dpi</string>
    <string name="dp">dp</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_undefined">Undefined</string>
    <string name="ldpi">ldpi</string>
    <string name="mdpi">mdpi</string>
    <string name="hdpi">hdpi</string>
    <string name="xhdpi">xhdpi</string>
    <string name="xxhdpi">xxhdpi</string>
    <string name="xxxhdpi">xxxhdpi</string>
    <string name="wifi_direct">WiFi Direct</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_le">Bluetooth LE</string>
    <string name="gps">GPS</string>
    <string name="camera_flash">Camera Flash</string>
    <string name="camera_front">Front camera</string>
    <string name="microphone">Microphone</string>
    <string name="nfc">NFC</string>
    <string name="usb_host">USB host</string>
    <string name="usb_accessory">USB accessory</string>
    <string name="multitouch">Multitouch</string>
    <string name="audio_low_latency">Audio low latency</string>
    <string name="audio_output">Audio output</string>
    <string name="professional_audio">Professional audio</string>
    <string name="consumer_ir">Consumer IR</string>
    <string name="gamepad_support">Gamepad support</string>
    <string name="hifi_sensor">HiFi sensor</string>
    <string name="printing">Printing</string>
    <string name="cdma">CDMA</string>
    <string name="gsm">GSM</string>
    <string name="app_widgets">App widgets</string>
    <string name="sip">SIP</string>
    <string name="sip_based_voip">SIP based VOIP</string>
    <string name="features">Features</string>
    <string name="available">Avaliable</string>
    <string name="not_supported">Not supported</string>
    <string name="ram">RAM</string>
    <string name="used_memory">Used memory</string>
    <string name="zeroMB">0 MB</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
    <string name="memory_type">Memory type</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="channels">Channels</string>
    <string name="graphics">Graphics</string>
    <string name="graphics_empty_screen">No graphics information avaliable</string>
    <string name="user_apps">User apps</string>
    <string name="system_apps">System apps</string>
    <string name="package_name">Package name</string>
    <string name="required_permissions">Required permissions</string>
    <string name="sensors">Sensors</string>
    <string name="available_sensor">Avaliable sensors</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="sensor_name">Sensor name</string>
    <string name="int_type">Sensor type</string>
    <string name="vendor">Vendor</string>
    <string name="power">Power</string>
    <string name="maximum_range">Maximum range</string>
    <string name="is_dynamic">isDynamicSensor</string>
    <string name="is_wakeup_sensor">isWakeUpSensor</string>
    <string name="reporting_mode">Reporting mode</string>

    <string name="mu_tesla">\u0020µT</string>
    <string name="degree_icon">\u0020\u00B0</string>
    <string name="rad">\u0020rad/s</string>
    <string name="cm">\u0020cm</string>
    <string name="percentage">%</string>
    <string name="lx">\u0020lx</string>
    <string name="ma">\u0020mA</string>
    <string name="pressure">Pressure:\u0020</string>
    <string name="hpa">\u0020hPa</string>
    <string name="geomagnetic_field">Geomagnetic field: \n\n</string>
    <string name="proximity_sensor">Proximity:\u0020</string>
    <string name="humidity_sensor">Humidity:\u0020</string>
    <string name="illuminance">Illuminance:\u0020</string>
    <string name="steps">Steps:\u0020</string>
    <string name="absolute_humidity_temperature_sensor">Absolute Humidity at Temperature:\u0020</string>
    <string name="due_point_temperature">Dew point:\u0020</string>
    <string name="angular_speed">Angular speed \n\n</string>
    <string name="ms">\u0020ms</string>


    <string name="home_title">Home</string>
    <string name="os_title">Android</string>
    <string name="cpu_title">CPU</string>
    <string name="battery_title">Battery</string>
    <string name="network_title">Network</string>
    <string name="display_title">Display</string>
    <string name="features_title">Features</string>
    <string name="ram_title">RAM</string>
    <string name="graphics_title">Graphics</string>
    <string name="user_apps_title">User\nApps</string>
    <string name="system_apps_title">System\nApps</string>
    <string name="sensors_title">Mobile\nSensors</string>
    <string name="installed">Installed:</string>
    <string name="updated">Updated:</string>
    <string name="version_app">Version:</string>
    <string name="pixels">Pixels</string>
    <string name="consumption">Consumption</string>
    <string name="statistics">Statistics</string>

    <string name="graphics_device_name">Graphics Device Name</string>
    <string name="graphics_device_vendor">Graphics Device Vendor</string>
    <string name="graphics_device_version">Graphics Device Version</string>
    <string name="graphics_device_extensions">Graphics Device Extensions</string>
    <string name="max_texture_size">Max Texture Size</string>


</resources>
