<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/dashboard_background"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardBackgroundColor="@color/card_view_bg"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

    <android.support.v4.widget.NestedScrollView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/iv_smartphone_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_smartphone"
                    android:tint="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_brand_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:textAllCaps="true"
                    android:textColor="@color/darkBlue"
                    android:textSize="17sp"
                    app:layout_constraintStart_toStartOf="@id/iv_smartphone_icon"
                    app:layout_constraintEnd_toEndOf="@id/iv_smartphone_icon"
                    app:layout_constraintTop_toBottomOf="@id/iv_smartphone_icon"/>

            <TextView
                    android:id="@+id/tv_model_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/iv_smartphone_icon"
                    app:layout_constraintEnd_toEndOf="@id/iv_smartphone_icon"
                    app:layout_constraintTop_toBottomOf="@id/tv_brand_name"/>


            <TextView
                    android:id="@+id/tv_manufacturer_label"
                    style="@style/textViewLabel"
                    android:text="@string/manufacturer"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_model_number"/>

            <TextView
                    android:id="@+id/tv_manufacturer"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_manufacturer_label"/>

            <TextView
                    android:id="@+id/tv_board_label"
                    style="@style/textViewLabel"
                    android:text="@string/board"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_manufacturer"/>

            <TextView
                    android:id="@+id/tv_board"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_board_label"/>

            <TextView
                    android:id="@+id/tv_architecture_label"
                    style="@style/textViewLabel"
                    android:text="@string/architecture"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_board"/>

            <TextView
                    android:id="@+id/tv_architecture"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_architecture_label"/>

            <TextView
                    android:id="@+id/tv_build_date_label"
                    style="@style/textViewLabel"
                    android:text="@string/build_date"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_architecture"/>

            <TextView
                    android:id="@+id/tv_build_date"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_build_date_label"/>

            <TextView
                    android:id="@+id/tv_hardware_label"
                    style="@style/textViewLabel"
                    android:text="@string/hardware"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_build_date"/>

            <TextView
                    android:id="@+id/tv_hardware"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_hardware_label"/>

            <TextView
                    android:id="@+id/tv_serial_no_label"
                    style="@style/textViewLabel"
                    android:text="@string/serial_no"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_hardware"/>

            <TextView
                    android:id="@+id/tv_serial_no"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_serial_no_label"/>

            <TextView
                    android:id="@+id/tv_android_id_label"
                    style="@style/textViewLabel"
                    android:text="@string/android_id"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_serial_no"/>

            <TextView
                    android:id="@+id/tv_android_id"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_android_id_label"/>

            <TextView
                    android:id="@+id/tv_screen_resolution_label"
                    style="@style/textViewLabel"
                    android:text="@string/screen_resolution"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_android_id"/>

            <TextView
                    android:id="@+id/tv_screen_resolution"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_screen_resolution_label"/>

            <TextView
                    android:id="@+id/tv_boot_loader_label"
                    style="@style/textViewLabel"
                    android:text="@string/boot_loader"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_screen_resolution"/>

            <TextView
                    android:id="@+id/tv_boot_loader"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_boot_loader_label"/>

            <TextView
                    android:id="@+id/tv_user_label"
                    style="@style/textViewLabel"
                    android:text="@string/user"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_boot_loader"/>

            <TextView
                    android:id="@+id/tv_user"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_label"/>

            <TextView
                    android:id="@+id/tv_host_label"
                    style="@style/textViewLabel"
                    android:text="@string/host"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_user"/>

            <TextView
                    android:id="@+id/tv_host"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_host_label"/>

            <TextView
                    android:id="@+id/tv_security_patch_level_label"
                    style="@style/textViewLabel"
                    android:text="@string/security_patch_level"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_host"/>

            <TextView
                    android:id="@+id/tv_security_patch_level"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_security_patch_level_label"/>

            <TextView
                    android:id="@+id/tv_kernel_label"
                    style="@style/textViewLabel"
                    android:text="@string/kernel"
                    android:textColor="@color/dashboard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_security_patch_level"/>

            <TextView
                    android:id="@+id/tv_kernel"
                    style="@style/textViewData"
                    android:textColor="@color/primary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_kernel_label"/>


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>
